--- a/templates/base.html
+++ b/templates/base.html
@@ -48,9 +48,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">StrongSkills</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <a href="/home" class="logo"><img src="static/img/re.png" alt=""  class="img-fluid"></a>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -99,8 +97,8 @@
   <section id="hero">
     <div class="hero-container" data-aos="fade-up"
     data-aos-duration="3000">
-      <h3>Our Businesses</h3>
-      <h1>Providing Your Basic Needs</h1>
+      <h3>Our Business</h3>
+      <h1>Providing Your Absolute Needs</h1>
     
     </div>
   </section><!-- End Hero -->
@@ -247,7 +245,7 @@
         <div class="section-title">
           <h2>Our Businesses</h2>
           <h3>Check our <span>Portfolio</span></h3>
-          <p>With our transformational projects and businesses across food, shelter and construction, Dangote Group continues to grow its vision of becoming the leading provider of essential needs in Africa.</p>
+          <p>With our transformational projects and businesses across, We continues to grow our vision of becoming the leading provider of essential needs in Africa.</p>
         </div>
 
         <div class="row">
@@ -378,7 +376,7 @@
         </div>
       </section><!-- End Cta Section -->
     <!-- ======= F.A.Q Section ======= -->
-     <section id="faq" class="faq">
+    <section id="faq" class="faq">
       <div class="container">
 
         <div class="section-title">
@@ -389,16 +387,16 @@
         <ul class="faq-list" data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in">
 
           <li>
-            <div data-bs-toggle="collapse"data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in" class="collapsed question" href="#faq1"><h4><b> Non consectetur a erat nam at lectus urna duis?</b> </h4> <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse"data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in" class="collapsed question" href="#faq1">Non consectetur a erat nam at lectus urna duis? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq1" class="collapse" data-bs-parent=".faq-list">
               <p>
-              Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
               </p>
             </div>
           </li>
 
           <li>
-            <div data-bs-toggle="collapse" data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in"href="#faq2" class="collapsed question"><h4><b> Non consectetur a erat nam at lectus urna duis?</b> </h4><i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in"href="#faq2" class="collapsed question">Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq2" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
@@ -407,7 +405,7 @@
           </li>
 
           <li>
-            <div data-bs-toggle="collapse"data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in" href="#faq3" class="collapsed question"><h4><b> Non consectetur a erat nam at lectus urna duis?</b> </h4><i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse"data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in" href="#faq3" class="collapsed question">Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq3" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
@@ -416,7 +414,7 @@
           </li>
 
           <li>
-            <div data-bs-toggle="collapse"data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in" href="#faq4" class="collapsed question"><h4><b> Non consectetur a erat nam at lectus urna duis?</b> </h4> <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse"data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in" href="#faq4" class="collapsed question">Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq4" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
@@ -425,7 +423,7 @@
           </li>
 
           <li>
-            <div data-bs-toggle="collapse"data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in" href="#faq5" class="collapsed question"><h4><b> Non consectetur a erat nam at lectus urna duis?</b> </h4><i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse"data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in" href="#faq5" class="collapsed question">Tempus quam pellentesque nec nam aliquam sem et tortor consequat? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq5" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in
@@ -434,7 +432,7 @@
           </li>
 
           <li>
-            <div data-bs-toggle="collapse"data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in" href="#faq6" class="collapsed question"><h4><b> Non consectetur a erat nam at lectus urna duis?</b> </h4><i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse"data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in" href="#faq6" class="collapsed question">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq6" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque. Pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus faucibus. Nibh tellus molestie nunc non blandit massa enim nec.
@@ -680,7 +678,10 @@
   </footer>-->
 
 
-  <footer class="new_footer_area bg_color">
+  <footer class="new_footer_area bg_colo" style="  color: #444444;
+ 
+  background: #fff;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);">
     <div class="new_footer_top">
         <div class="container">
             <div class="row">
@@ -698,14 +699,15 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
-                        <h3 class="f-title f_600 t_color f_size_18">Download</h3>
+                        <h3 class="f-title f_600 t_color f_size_18">Company</h3>
                         <ul class="list-unstyled f_list">
-                            <li><a href="#">Company</a></li>
-                            <li><a href="#">Android App</a></li>
-                            <li><a href="#">ios App</a></li>
-                            <li><a href="#">Desktop</a></li>
-                            <li><a href="#">Projects</a></li>
-                            <li><a href="#">My tasks</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Our Businesses</a></li>
+                            <li><a href="#">Sustainability</a></li>
+                            <li><a href="#">Career Opportunities</a></li>
+                            <li><a href="#">Strongskills Foundation</a></li>
+                            <li><a href="#">Media</a></li>
+                            <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -747,7 +749,6 @@
                   &copy; Copyright <strong><span>Strongskills</span></strong>. All Rights Reserved
                 </div>
                 <div class="col-lg-6 col-sm-5 text-right">
-                    
                   Designed by <a href="https://prestoghana.com/">Kalitex Creatives</a>
                 </div>
             </div>
