--- a/templates/home.html
+++ b/templates/home.html
@@ -48,7 +48,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html"></a></h1>
+   
       <!-- Uncomment below if you prefer to use an image logo -->
        <a href="/home" class="logo"><img src="static/img/re.png" alt=""  class="img-fluid"></a>
 
@@ -109,6 +109,9 @@
 
 
    
+
+ 
+  
 
   <!-- ======= ABOUT US ======= -->
     <section id="team" class="team">
@@ -317,23 +320,24 @@
          
         </div>
   
-       
-
-        <div class="video-section">
-          <div class="video-section-half2" data-aos="fade-left" data-aos-offset="100">
-            
-            <iframe width="100%" height="100%" src="https://video-previews.elements.envatousercontent.com/h264-video-previews/31fa9073-edbd-4e32-854f-513457b95c46/28421817.mp4" muted  frameborder="0" allow="accelerometer; autoplay; muted; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="box-shadow: 0 2px 10px -3px #493c3e;" allowfullscreen controls autoplay></iframe>
-          </div> 
-         
-          <div class="video-section-half1" data-aos="fade-right" data-aos-offset="100">
-            <p>This tour designed by our team, is to help transform student entertainment events into a world class outcome capable of attracting top notch corporate brands and leaving patrons of these events highly satisfied. </p>
-            <p>Providing you with logistics depending on your outline thus, (stage, led light trusses, sound systems, etc.), and any Artiste of your choice depending on your budget.
-              This tour is most effective in their <span>SRC week celebration, hall week celebrations, Awards and Pageantry shows</span> desired by these institutions.</p>
-            <a href="events.html" style="border:solid 2px; border-radius:30px; width:190px; padding:10px;" class="btn-learn-more">Explore More</a>
-          </div>
-        </div>
-      </div>
+   
     
+            <div class="video-section">
+              <div class="video-section-half2" data-aos="fade-left" data-aos-offset="100">
+                <iframe width="100%" height="100%" src="https://video-previews.elements.envatousercontent.com/h264-video-previews/31fa9073-edbd-4e32-854f-513457b95c46/28421817.mp4" muted  frameborder="0" allow="accelerometer; autoplay; muted; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="box-shadow: 0 2px 10px -3px #493c3e;" allowfullscreen controls autoplay></iframe>
+              </div> 
+             
+              <div class="video-section-half1" data-aos="fade-right" data-aos-offset="100">
+                <p>In a fast-moving and increasingly complex global economy, Strong Skills International success depends on how faithfully we adhere to our core principles: delivering exceptional client service; acting with integrity and responsibility; and supporting the growth of our employees.</p>
+                <p><b>Built on Principle:</b> <br>
+                  Strong Skills International is one of the strongest and most skillful divers group in the United States. With a history dating back over a decade, here's where we stand today:</p>
+                <a href="events.html" style="border:solid 2px; border-radius:30px; width:190px; padding:10px;" class="btn-learn-more">Explore More</a>
+              </div>
+            </div>
+          </div>
+          
+
+      
     </section>
   
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -394,8 +398,11 @@
               <h6 style="color:white; margin-bottom:10px; text-align:left; font-size:14px;">   Sustainability</h6>
               <h1 style="color:white;text-align:left;"><b>Building prosperity & self-sufficiency</b></h1>
               <h5 style="color:white; margin-bottom:10px; text-align:left;"> Our approach to sustainability goes beyond<br> compliance with regulatory expectations.<br> We are driven by a desire to contribute to,<br> and positively impact the development of <br> the society.
-                <h6 style="color:white; margin-bottom:10px; text-align:left; font-size:14px;"> <a href="" style="color:blue;">  Learn More -</a></h6>
-              </h5>
+                <div class="section-titl" style="display:flex;margin-top:30px;">
+                  <h5  style="background-color:#fff;  height: 37px; text-align:center; color:#191970; width:100px;  border-radius:0;font-size:11px; padding:13px;">READ MORE</h5> 
+                  <h2  style="background-color:#191970; height: 37px; width:40px; border-radius:0 5px 5px 0; color:#000;"></h2> 
+               
+                </div>    </h5>
               
             </div>
             
@@ -473,12 +480,10 @@
           <h2>LOGISTICS </h2>
         </div>
       </div>
-
+     
     </section><!-- End Services Section -->
-    <div class="section-title">
-      <h2  style="background-color:#fff;  height: 37px; text-align:center; color:#191970; width:120px; padding:13px; border-radius:0;font-size:11px; box-shadow: 0 2px 10px -3px #117964;"> <a href="/our-businesses" style="color:blue;">SEE MORE</a></h2> 
-  
-    </div>
+    
+ 
  
     <!-- ======= Features Section ======= -->
     <!--<section id="features" class="features">
@@ -767,8 +772,11 @@
                 <h1 style="color:white;text-align:left;"><b>Our Talent, Supporting Our Communities</b></h1>
                 <h5 style="color:white; margin-bottom:10px; text-align:left;"> 
                   A talent-driven company is by definition a diverse and inclusive one. Though we aim to do better still,<br> we're proud of the workplace we've created.<br> compliance with regulatory expectations.
-                  <h6 style="color:white; margin-bottom:10px; text-align:left; font-size:14px;"> <a href="" style="color:blue;">  See More -</a></h6>
-                </h5>
+                  <div class="section-titl" style="display:flex;margin-top:30px;">
+                    <h5  style="background-color:#fff;  height: 37px; text-align:center; color:#191970; width:100px;  border-radius:0;font-size:11px; padding:13px;">READ MORE</h5> 
+                    <h2  style="background-color:#191970; height: 37px; width:40px; border-radius:0 5px 5px 0; color:#000;"></h2> 
+                 
+                  </div>     </h5>
               </div>
               <div class="video-section-half2" data-aos="fade-left" data-aos-offset="100">
                 <img src="" style="width: 100%;"class="img-fluid" alt="">
@@ -1115,7 +1123,7 @@
   <footer class="new_footer_area bg_colo" style="  color: #444444;
   background-color:#8A8FF9;
   font-size: 14px;
-  background: #8A8FF9;
+  background: #fff;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);">
     <div class="new_footer_top">
         <div class="container">
