--- a/templates/sus.html
+++ b/templates/sus.html
@@ -110,6 +110,13 @@
    
    
 
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/css/bootstrap-extended.min.css">
+    <link rel="stylesheet" type="text/css" href="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/fonts/simple-line-icons/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/css/colors.min.css">
+    <link rel="stylesheet" type="text/css" href="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    
 
 
 
@@ -126,7 +133,7 @@
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-offset="250"data-aos="zoom-in">
             <div class="icon-box" style="box-shadow: 0 2px 10px -3px #117964;">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
+              <div class="icon"> <i class="icon-speech warning font-large-2 float-left"></i></div>
               <h4 class="title"><a href="">Marketing</a></h4>
               <p class="description">We aim to concentrate and promote projects and products</p>
             </div>
@@ -134,7 +141,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-offset="200"data-aos="zoom-in">
             <div class="icon-box" style="box-shadow: 0 2px 10px -3px #117964;">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <div class="icon"> <i class="icon-graph success font-large-2 float-left"></i></div>
               <h4 class="title"><a href="">Media</a></h4>
               <p class="description">We arganise events for coporate and individual clients</p>
             </div>
@@ -142,7 +149,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in">
             <div class="icon-box" style="box-shadow: 0 2px 10px -3px #117964;" >
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
+              <div class="icon"> <i class="icon-pointer danger font-large-2 float-left"></i></div>
               <h4 class="title"><a href="">Analytics</a></h4>
               <p class="description">We are able to manage and identify growth based on our numbers.</p>
             </div>
@@ -150,7 +157,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-offset="100"data-aos="zoom-in">
             <div class="icon-box" style="box-shadow: 0 2px 10px -3px #117964;">
-              <div class="icon"><i class="bx bx-world"></i></div>
+              <div class="icon"><i class="icon-rocket danger font-large-2 float-right"></i></div>
               <h4 class="title"><a href="">Schemes  </a></h4>
               <p class="description">Single product, event organisations and entity advertisment is our craft.</p>
             </div>
@@ -165,7 +172,8 @@
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-offset="250"data-aos="zoom-in">
             <div class="icon-box" style="box-shadow: 0 2px 10px -3px #117964;">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
+              <div class="icon">
+                <i class="icon-user success font-large-2 float-right"></i></div>
               <h4 class="title"><a href="">Marketing</a></h4>
               <p class="description">We aim to concentrate and promote projects and products</p>
             </div>
@@ -173,7 +181,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-offset="200"data-aos="zoom-in">
             <div class="icon-box" style="box-shadow: 0 2px 10px -3px #117964;">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <div class="icon"> <i class="icon-pie-chart warning font-large-2 float-right"></i></div>
               <h4 class="title"><a href="">Media</a></h4>
               <p class="description">We arganise events for coporate and individual clients</p>
             </div>
@@ -181,7 +189,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in">
             <div class="icon-box" style="box-shadow: 0 2px 10px -3px #117964;" >
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
+              <div class="icon"><i class="icon-support primary font-large-2 float-right"></i></div>
               <h4 class="title"><a href="">Analytics</a></h4>
               <p class="description">We are able to manage and identify growth based on our numbers.</p>
             </div>
@@ -189,7 +197,8 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-offset="100"data-aos="zoom-in">
             <div class="icon-box" style="box-shadow: 0 2px 10px -3px #117964;">
-              <div class="icon"><i class="bx bx-world"></i></div>
+              <div class="icon">
+                <i class="icon-book-open primary font-large-2 float-right"></i></div>
               <h4 class="title"><a href="">Schemes  </a></h4>
               <p class="description">Single product, event organisations and entity advertisment is our craft.</p>
             </div>
@@ -204,7 +213,7 @@
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-offset="250"data-aos="zoom-in">
             <div class="icon-box" style="box-shadow: 0 2px 10px -3px #117964;">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
+              <div class="icon"> <i class="icon-bubbles warning font-large-2 float-right"></i></div>
               <h4 class="title"><a href="">Marketing</a></h4>
               <p class="description">We aim to concentrate and promote projects and products</p>
             </div>
@@ -212,7 +221,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-offset="200"data-aos="zoom-in">
             <div class="icon-box" style="box-shadow: 0 2px 10px -3px #117964;">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <div class="icon"> <i class="icon-cup success font-large-2 float-right"></i></div>
               <h4 class="title"><a href="">Media</a></h4>
               <p class="description">We arganise events for coporate and individual clients</p>
             </div>
@@ -220,7 +229,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-offset="150"data-aos="zoom-in">
             <div class="icon-box" style="box-shadow: 0 2px 10px -3px #117964;" >
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
+              <div class="icon"> <i class="icon-direction danger font-large-2 float-right"></i></div>
               <h4 class="title"><a href="">Analytics</a></h4>
               <p class="description">We are able to manage and identify growth based on our numbers.</p>
             </div>
@@ -228,7 +237,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-offset="100"data-aos="zoom-in">
             <div class="icon-box" style="box-shadow: 0 2px 10px -3px #117964;">
-              <div class="icon"><i class="bx bx-world"></i></div>
+              <div class="icon">  <i class="icon-pencil primary font-large-2 mr-2"></i></div>
               <h4 class="title"><a href="">Schemes  </a></h4>
               <p class="description">Single product, event organisations and entity advertisment is our craft.</p>
             </div>
@@ -278,18 +287,65 @@
      <section id="cta" class="cta">
       <div class="container">
         
+        <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/css/bootstrap-extended.min.css">
+        <link rel="stylesheet" type="text/css" href="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/fonts/simple-line-icons/style.min.css">
+        <link rel="stylesheet" type="text/css" href="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/css/colors.min.css">
+        <link rel="stylesheet" type="text/css" href="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/css/bootstrap.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+        
         <div class="text-center" >
           <div class="video-section">
             <div class="video-section-half1" data-aos="fade-right" data-aos-offset="100">
               <h6 style="color:white; margin-bottom:10px; text-align:left; font-size:14px;">   Sustainability</h6>
               <h1 style="color:white;text-align:left;"><b>Building prosperity & self-sufficiency</b></h1>
               <h5 style="color:white; margin-bottom:10px; text-align:left;"> our approach to sustainability goes beyond<br> compliance with regulatory expectations.<br> We are driven by a desire to contribute to,<br> and positively impact the development of <br> the society.
-                <h6 style="color:white; margin-bottom:10px; text-align:left; font-size:14px;">   Learn More -</h6>
-              </h5>
+                <div class="section-titl" style="display:flex;margin-top:30px;">
+                  <h5  style="background-color:#fff;  height: 37px; text-align:center; color:#191970; width:100px;  border-radius:0;font-size:11px; padding:13px;">READ MORE</h5> 
+                  <h2  style="background-color:#191970; height: 37px; width:40px; border-radius:0 5px 5px 0; color:#000;"></h2> 
+               
+                </div>     </h5>
               
             </div>
             <div class="video-section-half2" data-aos="fade-left" data-aos-offset="100">
-              <img src="" style="width: 100%;"class="img-fluid" alt="">
+             
+                <div class="card">
+                  <div class="card-content">
+                    <div class="card-body">
+                      <div class="media d-flex">
+                        <div class="media-body text-left">
+                          <h3 class="primary">92.34%</h3>
+                          <span>Strong Support Service</span>
+                        </div>
+                        <div class="align-self-center">
+                          <i class="icon-support primary font-large-2 float-right"></i>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+            
+        <div class="card">
+          <div class="card-content">
+            <div class="card-body">
+              <div class="media d-flex">
+                <div class="media-body text-left">
+                  <h3 class="warning">64.89 %</h3>
+                  <span>Conversion Rate</span>
+                </div>
+                <div class="align-self-center">
+                  
+                  <i class="icon-graph success font-large-2 float-left"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+       </div>
+            
+            </div>
+            
                </div> 
            
           </div>
@@ -749,7 +805,12 @@
   </footer>-->
 
 
-  <footer class="new_footer_area bg_color">
+
+  <footer class="new_footer_area bg_colo" style="  color: #444444;
+  background-color:#8A8FF9;
+  font-size: 14px;
+  background: #fff;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);">
     <div class="new_footer_top">
         <div class="container">
             <div class="row">
@@ -767,14 +828,15 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
-                        <h3 class="f-title f_600 t_color f_size_18">Download</h3>
+                        <h3 class="f-title f_600 t_color f_size_18">Company</h3>
                         <ul class="list-unstyled f_list">
-                            <li><a href="#">Company</a></li>
-                            <li><a href="#">Android App</a></li>
-                            <li><a href="#">ios App</a></li>
-                            <li><a href="#">Desktop</a></li>
-                            <li><a href="#">Projects</a></li>
-                            <li><a href="#">My tasks</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Our Businesses</a></li>
+                            <li><a href="#">Sustainability</a></li>
+                            <li><a href="#">Career Opportunities</a></li>
+                            <li><a href="#">Strongskills Foundation</a></li>
+                            <li><a href="#">Media</a></li>
+                            <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -816,13 +878,13 @@
                   &copy; Copyright <strong><span>Strongskills</span></strong>. All Rights Reserved
                 </div>
                 <div class="col-lg-6 col-sm-5 text-right">
-                    
                   Designed by <a href="https://prestoghana.com/">Kalitex Creatives</a>
                 </div>
             </div>
         </div>
     </div>
 </footer>
+
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
