--- a/static/css/about.css
+++ b/static/css/about.css
@@ -75,7 +75,7 @@ h6 {
 }
 
 #header .logo {
-  font-size: 30px;
+  font-size: 25px;
   margin: 0;
   padding: 0;
   line-height: 1;
@@ -89,7 +89,7 @@ h6 {
 }
 
 #header .logo img {
-  max-height: 40px;
+  max-height: 60px;
 }
 
 #header.header-scrolled,
@@ -361,7 +361,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("https://d2v9ipibika81v.cloudfront.net/uploads/sites/175/IMG_1501-750x450.jpg") top center;
+  background: url("https://aem.dropbox.com/cms/content/dam/dropbox/warp/en-us/business/solutions/construction/construction-hero@2x.jpg.transform/1920w/80q/img.jpg") top center;
   background-size: cover;
   position: relative;
 }
@@ -687,7 +687,7 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.8)), url("https://www.publicdomainpictures.net/pictures/10000/nahled/1-1229115491GHkw.jpg") center center;
+  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.8)), url("https://www.hsimagazine.com/wp-content/uploads/2020/01/iStock-1028568006.jpg") center center;
   background-size: cover;
   padding: 60px 0;
   height:500px;
@@ -2354,3 +2354,49 @@ left: 100%;
 
 /*************footer End*****************/
 
+    /*--------------------------------------------------------------
+  # Ct
+  --------------------------------------------------------------*/
+  .ct {
+    background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.8)), url("https://i0.wp.com/theconstructor.org/wp-content/uploads/2012/10/construction-company.jpg?fit=3372%2C1897&ssl=1") center center;
+    background-size: cover;
+    padding: 60px 0;
+    height:500px;
+  }
+  
+  .ct h3 {
+    color: #fff;
+    font-size: 28px;
+    font-weight: 700;
+  }
+  
+  .ct p {
+    color: #fff;
+  }
+  
+  .ct .ct-btn {
+    font-family: "Poppins", sans-serif;;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 1px;
+    display: inline-block;
+    padding: 8px 28px;
+    border-radius: 25px;
+    transition: 0.5s;
+    margin-top: 10px;
+    border: 2px solid #fff;
+    color: #fff;
+  }
+  
+  .ct .ct-btn:hover {
+    background: #e43c5c;
+    border: 2px solid #e43c5c;
+  }
+  
+  @media (min-width: 1024px) {
+    .ct {
+      background-attachment: fixed;
+    }
+  }
+  
