--- a/static/css/main1.css
+++ b/static/css/main1.css
@@ -361,7 +361,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("https://img.freepik.com/free-photo/skyscrapers-from-low-angle-view_1359-568.jpg?w=2000") top center;
+  background: url("https://www.businesslist.ph/img/cats/construction.jpg") top center;
   background-size: cover;
   position: relative;
 }
