--- a/templates/about.html
+++ b/templates/about.html
@@ -47,10 +47,9 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
-
-      <h1 class="logo"><a href="index.html">StrongSkills</a></h1>
+    
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+       <a href="/home" class="logo"><img src="static/img/re.png" alt=""  class="img-fluid"></a>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -99,9 +98,9 @@
   <section id="hero">
     <div class="hero-container" data-aos="fade-up"
     data-aos-duration="3000">
-      <h3>ABOUT US</h3>
-      <h1>Strong Skills International</h1>
-    
+     <b> <h3>ABOUT US</h3></b>
+      <h1><b>Strong Skills International</b></h1>
+     
       
     </div>
   </section><!-- End Hero -->
@@ -184,11 +183,11 @@
             <div class="video-section-half1" data-aos="fade-right" data-aos-offset="100">
               <h6 style="color:#fff; margin-bottom:0; text-align:left; font-size:14px;">   Vision & Mission</h6>
               <h1 style="color:white;text-align:left;"><b>Our Mission</b></h1>
-              <h5 style="color:white; margin-bottom:10px; text-align:left;"> We deliver strong services to our shareholders by selling high-quality products at affordable prices, backed by excellent customer service. <br>Help Nigerian and other countries towards a better living and self-sufficiency, by establishing efficient production facilities in strategic locations close to key growth markets.  
+              <h5 style="color:white; margin-bottom:10px; text-align:left;"> We deliver strong services to our shareholders by selling high-quality products at affordable prices, backed by excellent customer service. <br>Help Nigerian and other countries towards a better living and self-sufficiency, by establishing efficient production facilities in strategic locations close to key growth markets. <br> 
                 <br>   We provide economic benefits to local communities, by establishing efficient production facilities in strategic locations close to key growth markets.
                 <br> To provide economic benefits to local communities by way of direct and indirect employment in all countries in which we operate.  
             
-                <div class="section-titl" style="display:flex;margin-top:30px;">
+                <div class="section-titl" style="display:flex;margin-top:10px;">
                     <h5  style="background-color:#fff;  height: 37px; text-align:center; color:#191970; width:100px;  border-radius:0;font-size:11px; padding:13px;">READ MORE</h5> 
                     <h2  style="background-color:#191970; height: 37px; width:40px; border-radius:0 5px 5px 0; color:#000;"></h2> 
                  
@@ -523,7 +522,7 @@
 
       </div>
     </section> -->   
-      <section id="cta" class="cta" >
+      <section id="ct" class="ct" >
         <div class="container">
           <div class="text-center" >
             <div class="video-section">
@@ -532,11 +531,18 @@
                 <h1 style="color:white;text-align:left;"><b> Over 10 Years of Thinking Big</b></h1>
                 <h5 style="color:white; margin-bottom:10px; text-align:left;"> 
                  
-                  From helping provide affordable short term living. the plan to pioneering data-driven Philanthropy, Strong Skills international has a long history.   <h6 style="color:white; margin-bottom:10px; text-align:left; font-size:14px;"> <a href="" style="color:blue;">  See More -</a></h6>
+                  From helping provide affordable short term living. the plan to pioneering data-driven Philanthropy, Strong Skills international has a long history. 
+                    <h6 style="color:white; margin-bottom:0px; text-align:left; font-size:14px;"> <div class="section-titl" style="display:flex;margin-top:30px;">
+                   
+                  </div>
                 </h5>
                 <h1 style="color:white;text-align:left;"><b>  Art Collection</b></h1>
                 <h5 style="color:white; margin-bottom:10px; text-align:left;">   Since its founding Strong Skills International has become one of the the most special collections creator in the world. Our mission is to connect clients, colleagues, and communities through art and the conversations it can start.</h5>
-                <h6 style="color:white; margin-bottom:10px; text-align:left; font-size:14px;"> <a href="" style="color:blue;">  See More -</a></h6>
+                <div class="section-titl" style="display:flex;margin-top:0px;">
+                  <h5  style="background-color:#fff;  height: 37px; text-align:center; color:#191970; width:100px;  border-radius:0;font-size:11px; padding:13px;">READ MORE</h5> 
+                  <h2  style="background-color:#191970; height: 37px; width:40px; border-radius:0 5px 5px 0; color:#000;"></h2> 
+               
+                </div>
               </div>
  
              <div class="video-section-half2" data-aos="fade-left" data-aos-offset="100">
@@ -904,7 +910,10 @@
   </footer>-->
 
 
-  <footer class="new_footer_area bg_color">
+  <footer class="new_footer_area bg_colo" style="  color: #444444;
+ 
+  background: #fff;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);">
     <div class="new_footer_top">
         <div class="container">
             <div class="row">
@@ -922,14 +931,15 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
-                        <h3 class="f-title f_600 t_color f_size_18">Download</h3>
+                        <h3 class="f-title f_600 t_color f_size_18">Company</h3>
                         <ul class="list-unstyled f_list">
-                            <li><a href="#">Company</a></li>
-                            <li><a href="#">Android App</a></li>
-                            <li><a href="#">ios App</a></li>
-                            <li><a href="#">Desktop</a></li>
-                            <li><a href="#">Projects</a></li>
-                            <li><a href="#">My tasks</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Our Businesses</a></li>
+                            <li><a href="#">Sustainability</a></li>
+                            <li><a href="#">Career Opportunities</a></li>
+                            <li><a href="#">Strongskills Foundation</a></li>
+                            <li><a href="#">Media</a></li>
+                            <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -971,7 +981,6 @@
                   &copy; Copyright <strong><span>Strongskills</span></strong>. All Rights Reserved
                 </div>
                 <div class="col-lg-6 col-sm-5 text-right">
-                    
                   Designed by <a href="https://prestoghana.com/">Kalitex Creatives</a>
                 </div>
             </div>
