--- a/templates/contact.html
+++ b/templates/contact.html
@@ -102,7 +102,7 @@
       <h3>We Are</h3>
       <h1>Strong Skills International</h1>
     
-      <a href="#about" class="btn-get-started scrollto">Get Started</a>
+   
     </div>
   </section><!-- End Hero -->
 
@@ -487,7 +487,12 @@
   </footer>-->
 
 
-  <footer class="new_footer_area bg_color">
+
+  <footer class="new_footer_area bg_colo" style="  color: #444444;
+  background-color:#8A8FF9;
+  font-size: 14px;
+  background: #fff;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);">
     <div class="new_footer_top">
         <div class="container">
             <div class="row">
@@ -505,14 +510,15 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
-                        <h3 class="f-title f_600 t_color f_size_18">Download</h3>
+                        <h3 class="f-title f_600 t_color f_size_18">Company</h3>
                         <ul class="list-unstyled f_list">
-                            <li><a href="#">Company</a></li>
-                            <li><a href="#">Android App</a></li>
-                            <li><a href="#">ios App</a></li>
-                            <li><a href="#">Desktop</a></li>
-                            <li><a href="#">Projects</a></li>
-                            <li><a href="#">My tasks</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Our Businesses</a></li>
+                            <li><a href="#">Sustainability</a></li>
+                            <li><a href="#">Career Opportunities</a></li>
+                            <li><a href="#">Strongskills Foundation</a></li>
+                            <li><a href="#">Media</a></li>
+                            <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -554,7 +560,6 @@
                   &copy; Copyright <strong><span>Strongskills</span></strong>. All Rights Reserved
                 </div>
                 <div class="col-lg-6 col-sm-5 text-right">
-                    
                   Designed by <a href="https://prestoghana.com/">Kalitex Creatives</a>
                 </div>
             </div>
